[project]
name = "ComfyUI-HY-Motion1"
description = "A ComfyUI plugin based on HY-Motion 1.0 for text-to-3D human motion generation."
version = "0.5.1"
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["fbxsdkpy==2020.1.post2", "torchdiffeq>=0.2.5", "transforms3d>=0.4.2", "omegaconf>=2.3.0", "accelerate>=0.30.0", "huggingface_hub>=0.30.0", "bitsandbytes>=0.42.0"]

[project.urls]
Repository = "https://github.com/jtydhr88/ComfyUI-HY-Motion1"

[tool.comfy]
PublisherId = "jtydhr88"
DisplayName = "ComfyUI HY Motion1"
Icon = ""
